mcfootball-generator/src/test/resources/football/invalid/BadSeason.fb
/* Invalid test file — triggers:
 *   0xFC009  SeasonFormatIsValid     ("not-a-season" is not YYYY-YYYY)
 */
footballsite BadSeasonTest {

  navigation { Germany; }

  country Germany {
    league Bundesliga season "not-a-season" {
      match {
        date    "2025-09-01"
        time    "15:30"
        home    "Bayern München"    ("Munich")
        away    "Borussia Dortmund" ("Dortmund")
        score   2 - 1
        stadium "Allianz Arena"
      }
    }
  }

}
